cmake_minimum_required(VERSION 3.8)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_COMPILER clang++-10)
SET (CMAKE_CXX_STANDARD 20)
SET (CLIENT_PROJECT "Client")
SET (SERVER_PROJECT "Server")
SET (GUI_PROJECT "GUI")
project(${CLIENT_PROJECT} LANGUAGES CXX C)
project(${SERVER_PROJECT} LANGUAGES CXX C)
project(${GUI_PROJECT} LANGUAGES CXX C)

set(BOOST_ROOT "/home/kacper/boost_1_73_0 ")
set(Boost_USE_STATIC_LIBS        ON)
set(Boost_USE_DEBUG_LIBS         ON)
set(Boost_USE_RELEASE_LIBS       ON)
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)

set(CLIENT_SOURCE Client.cpp)
set(SERVER_SOURCE Server.cpp)
set(GUI_SOURCE GUI.cpp)
find_package(Poco REQUIRED JSON Net)
find_package(Boost 1.73.0 REQUIRED COMPONENTS thread system)
find_package(wxWidgets 3.1.4 REQUIRED COMPONENTS core base)
include(${wxWidgets_USE_FILE})
if (wxWidgets_FOUND)
  if (Poco_FOUND)
    if(Boost_FOUND)
      include_directories(${Boost_INCLUDE_DIRS})
      add_executable(${CLIENT_PROJECT} ${CLIENT_SOURCE})
      add_executable(${SERVER_PROJECT} ${SERVER_SOURCE})
      add_executable(${GUI_PROJECT} ${GUI_SOURCE})
      target_link_libraries(${CLIENT_PROJECT} Poco::JSON Poco::Net ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
      target_link_libraries(${SERVER_PROJECT} Poco::JSON Poco::Net ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY})
      target_link_libraries(${GUI_PROJECT} ${wxWidgets_LIBRARIES} Poco::Net Poco::JSON)
    endif()
  endif()
endif()